compiler/tests/success/slh/x86-64/protect_64.jazz
export
fn foo(reg u64 p) -> {
    #[nospill] reg u64 msf;
    msf = #init_msf();

    reg u64 x;
    x = 0;
    x = #protect(x, msf);

    [:u64 p] = x;
}
